--- a/code/SGD TwitterSentAnalysis.ipynb
+++ b/code/SGD TwitterSentAnalysis.ipynb
@@ -94,7 +94,7 @@
    },
    "outputs": [],
    "source": [
-    "train = pd.read_csv(\"D:/Users/S06077/Documents/Cesaro/EPSI/TwitterSentimentAnalysis/train_E6oV3lV.csv\", encoding='ISO-8859-1')"
+    "train = pd.read_csv(\"input/train_E6oV3lV.csv\", encoding='ISO-8859-1')"
    ]
   },
   {
@@ -112,7 +112,7 @@
    },
    "outputs": [],
    "source": [
-    "test = pd.read_csv(\"D:/Users/S06077/Documents/Cesaro/EPSI/TwitterSentimentAnalysis/test_tweets_anuFYb8.csv\", encoding='ISO-8859-1')"
+    "test = pd.read_csv(\"input/test_tweets_anuFYb8.csv\", encoding='ISO-8859-1')"
    ]
   },
   {
