--- a/code/LinearSVC TwitterSentAnalysis.ipynb
+++ b/code/LinearSVC TwitterSentAnalysis.ipynb
@@ -58,8 +58,8 @@
    },
    "outputs": [],
    "source": [
-    "train = pd.read_csv(\"D:/Users/S06077/Documents/Cesaro/EPSI/TwitterSentimentAnalysis/train_E6oV3lV.csv\", encoding='ISO-8859-1')\n",
-    "test = pd.read_csv(\"D:/Users/S06077/Documents/Cesaro/EPSI/TwitterSentimentAnalysis/test_tweets_anuFYb8.csv\", encoding='ISO-8859-1')"
+    "train = pd.read_csv(\"input/train_E6oV3lV.csv\", encoding='ISO-8859-1')\n",
+    "test = pd.read_csv(\"input/test_tweets_anuFYb8.csv\", encoding='ISO-8859-1')"
    ]
   },
   {
